syntax = "proto3";

package helloworld;

option go_package = "github.com/alexandreps1123/grpc-go/helloworld/proto";

message HelloWorldRequest {
    string name = 1;
}

message HelloWorldResponse {
    string result = 1;
}

service HelloWorldService {
    rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse);
}